agregue prueba al titulo

--- a/lista.html
+++ b/lista.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="CSS/estilos.css">
-    <title>TABLA 1 prueba prueba 2</title>
+    <title>TABLA 1 prueba prueba 2 pruebas</title>
   </head>
   <body>
     <div id="contenedor3">
